<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cal_ins_sch_but1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/cal_ins_sch_but1" />

        <Button
            android:id="@+id/cal_ins_sch_but2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/cal_ins_sch_but2" />

        <Button
            android:id="@+id/cal_ins_sch_but3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/cal_ins_sch_but3" />
    </LinearLayout>

    <EditText
        android:id="@+id/cal_ins_sch_et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cal_ins_sch_et1_hint"
        android:maxLines="1" />

    <DatePicker
        android:id="@+id/cal_ins_sch_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TimePicker
        android:id="@+id/cal_sch_ins_tp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cal_ins_sch_et2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:hint="@string/cal_ins_sch_et2_hint" />

</LinearLayout>